--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ pymdown-extensions==10.9
 Markdown==3.6
 mkdocs-git-revision-date-localized-plugin==1.2.6
 mkdocs-git-committers-plugin-2==2.3.0
+mkdocs-minify-plugin==0.8.0
