docs: documentação de inadimplencia
Co-authored-by: Pedro Lucas <pedroynk@users.noreply.github.com>

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -131,4 +131,5 @@ watch:
 nav:
 - Início: index.md
 - Documentação:
-  - interno/index.md
+  - Relatório Financeiro:
+    - financeiro/inadimplencia.md
