docs: adiciona documentação contas a pagar

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -132,4 +132,5 @@ nav:
 - Início: index.md
 - Documentação:
   - Relatório Financeiro:
+    - financeiro/contas-a-pagar.md
     - financeiro/inadimplencia.md
