--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -51,6 +51,7 @@ plugins:
   - git-committers:
       repository: IDEA-TECHNOLOGY-IT/docs-idea_finance
       branch: main
+  - glightbox
     
 
 # Configurações de extra CSS (opcional)
