--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ Markdown==3.6
 mkdocs-git-revision-date-localized-plugin==1.2.6
 mkdocs-git-committers-plugin-2==2.3.0
 mkdocs-minify-plugin==0.8.0
+mkdocs-glightbox==0.4.0
