--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -12,6 +12,7 @@ theme:
   name: material
   custom_dir: overrides
   logo: assets/logo.png
+  favicon: assets/favicon.ico
   features:
     - content.code.copy
     - navigation.indexes
