adiciona pagina conta a receber

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -135,3 +135,4 @@ nav:
   - Relatório Financeiro:
     - financeiro/contas-a-pagar.md
     - financeiro/inadimplencia.md
+    - financeiro/contas_a_receber.md
