Adiciona fluxo de contas

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -136,3 +136,4 @@ nav:
     - financeiro/contas-a-pagar.md
     - financeiro/inadimplencia.md
     - financeiro/contas_a_receber.md
+    - financeiro/fluxo_de_contas.md
