docs:inicia documentação prazo medio de recebimento

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -137,3 +137,4 @@ nav:
     - financeiro/inadimplencia.md
     - financeiro/contas_a_receber.md
     - financeiro/fluxo_de_contas.md
+    - financeiro/prazo_medio_recebimento.md
