--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -62,6 +62,7 @@ extra_css:
 
 # Configurações de extra JavaScript (opcional)
 extra_javascript:
+  - 'javascripts/checklist.js'
   - 'javascripts/carrousel.js'
   - 'javascripts/home.js'
 
