--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -142,3 +142,15 @@ nav:
     - financeiro/prazo_medio_recebimento.md
     - financeiro/fluxo_de_caixa.md
     - financeiro/saldo_de_contas.md
+  - Contabilidade:
+    - contabilidade/conteúdo.md
+    - contabilidade/intro.md
+    - contabilidade/indicadores_caixas.md
+    - contabilidade/home.md
+    - contabilidade/receitabruta.md
+    - contabilidade/custosedespesas.md
+    - contabilidade/lucroliquido.md
+    - contabilidade/ebitda.md
+    - contabilidade/indicadores.md
+    - contabilidade/regrados40.md
+    - contabilidade/dre.md
