--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -158,3 +158,4 @@ nav:
     - faturamento/home.md
     - faturamento/vendas.md
     - faturamento/faturamento_liquido.md
+    - faturamento/lucro_bruto.md
