--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -159,3 +159,4 @@ nav:
     - faturamento/vendas.md
     - faturamento/faturamento_liquido.md
     - faturamento/lucro_bruto.md
+    - faturamento/positivaoao.md
