docs: documenta relatorio de positivacao

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -159,4 +159,4 @@ nav:
     - faturamento/vendas.md
     - faturamento/faturamento_liquido.md
     - faturamento/lucro_bruto.md
-    - faturamento/positivaoao.md
+    - faturamento/positivacao.md
