--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -158,6 +158,8 @@ nav:
   - Idea Sales:
     - faturamento/home.md
     - faturamento/vendas.md
+    - faturamento/devolucoes.md
     - faturamento/faturamento_liquido.md
     - faturamento/lucro_bruto.md
     - faturamento/positivacao.md
+    
