--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -140,6 +140,7 @@ nav:
     - financeiro/inadimplencia.md
     - financeiro/pagamentos-vencidos.md
     - financeiro/prazo_medio_recebimento.md
+    - financeiro/prazo_medio_pagamento.md
     - financeiro/fluxo_de_caixa.md
     - financeiro/saldo_de_contas.md
   - Contabilidade:
