--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -144,6 +144,7 @@ nav:
     - faturamento/positivacao.md
   - BI Idea Finance: 
     - financeiro/ficha-tecnica.md
+    - financeiro/intro.md
     - financeiro/contas_a_receber.md
     - financeiro/contas-a-pagar.md
     - financeiro/inadimplencia.md
