--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -145,6 +145,7 @@ nav:
   - BI Idea Finance: 
     - financeiro/ficha-tecnica.md
     - financeiro/intro.md
+    - financeiro/indicadores_caixas.md
     - financeiro/contas_a_receber.md
     - financeiro/contas-a-pagar.md
     - financeiro/inadimplencia.md
