--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -159,7 +159,7 @@ nav:
   - BI Idea Accounting:
     - contabilidade/ficha-tecnica.md
     - contabilidade/intro.md
-    - contabilidade/indicadores_caixas.md
+    - contabilidade/indicadores_contábeis.md
     - contabilidade/home.md
     - contabilidade/receitabruta.md
     - contabilidade/custosedespesas.md
