--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,7 +1,7 @@
 # mkdocs.yml
 
 site_name: 'Analytics'
-site_url: https://idea-technology-it.github.io/docs-idea_finance/
+site_url: https://idea-technology-it.github.io/docs-idea/
 site_description: Documentação para o projeto Idea Business Analytics
 site_author: rafaelmedeirosnobre@gmail.com
 # Copyright
