--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -45,8 +45,8 @@ plugins:
       separator: '[\s\-,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
   - minify:
       minify_html: true
-  # - git-revision-date-localized:
-  #     enable_creation_date: true
+  - git-revision-date-localized:
+      enable_creation_date: true
   # - git-committers:
   #     repository: IDEA-TECHNOLOGY-IT/docs-idea_finance
   #     branch: main
