feat: insere iframe

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -167,3 +167,6 @@ nav:
     - contabilidade/indicadores.md
     - contabilidade/regra_dos_40.md
     - contabilidade/dre.md
+- Demonstração:
+  - BI Idea Finance:
+    - financeiro/demo.md
