fix: ajusta headers and home

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -167,7 +167,7 @@ nav:
     - contabilidade/indicadores.md
     - contabilidade/regra_dos_40.md
     - contabilidade/dre.md
-- Demonstração:
+- Demonstrações:
   - faturamento/demo.md
   - financeiro/demo.md
   - contabilidade/demo.md
