--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -3,7 +3,7 @@
 site_name: 'Analytics'
 site_url: https://idea-technology-it.github.io/docs-idea/
 site_description: Documentação para o projeto Idea Business Analytics
-site_author: rafaelmedeirosnobre@gmail.com
+site_author: 'Rafael Nobre <rafaelmedeirosnobre@gmail.com>, Catherine Sealey <csealeybr@gmail.com>'
 # Copyright
 copyright: Copyright &copy; 2024 - 2024 Idea Technology
 
